[package]
name = "noktulo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.4"}
rand_chacha = "*"
sha3 = "*" 
futures = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
num-bigint = {version = "0.4", features = ["rand"]}