[package]
name = "noktulo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.4"}
rand_chacha = "*"
sha3 = "*"
sha2 = "0.10.2"
blake2 = "0.9.2"
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
serde-big-array = "0.4.1"
num-bigint = {version = "0.4", features = ["rand"]}
chrono = "0.4"
log = "0.4"
env_logger = "0.9.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.9.0"
hex = "0.4.3"
tokio-tungstenite = "*"
futures = "0.3"
tokio-stream = "0.1"
ed25519-dalek = "1.0.1"